force-app/main/default/objects/Maintance__c/Maintance__c.object-meta.xml
<CustomObject>
    <label>Maintenance</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Maintance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>