force-app/main/default/objects/Maintance__c/fields/Maintenance_due_date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_due_date__c</fullName>
    <label>Maintenance due date</label>
    <type>Date</type>
</CustomField>