force-app/main/default/objects/Maintance__c/fields/Maintenance_Report__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Report__c</fullName>
    <label>Maintenance Report</label>
    <type>TextArea</type>
</CustomField>