force-app/main/default/objects/Maintance__c/fields/Maintenance_start_date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_start_date__c</fullName>
    <label>Maintenance start date</label>
    <type>Date</type>
</CustomField>