force-app/main/default/objects/Maintance__c/fields/Maintenance_status__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_status__c</fullName>
    <label>Maintenance status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintained</fullName>
            </value>
            <value>
                <fullName>Waiting _or_maintenance</fullName>
                <default>true</default>
                <label>Waiting for maintenance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>