force-app/main/default/objects/Maintance__c/fields/Scheduled_maintenance_date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_maintenance_date__c</fullName>
    <label>Scheduled maintenance date</label>
    <type>Date</type>
</CustomField>