force-app/main/default/objects/Maintance__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Maintenances</relationshipLabel>
    <relationshipName>Maintenances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>