force-app/main/default/objects/Maintance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>